--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 
-{% block body %}
+{% block content %}
 <h1>{{ _('Welcome, drop here you file!') }}</h1>
 <form id="myDropzone" action="{{ url_for('main.index_post') }}" class="dropzone">
 </form>
