--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -1,17 +1,84 @@
-{% extends "bootstrap.html" %}
+{% import "_macros.html" as m %}
 
-{% block title %}FBInsight{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <!-- Meta -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Social Insight">
+        <meta name="author" content="Radosław Pluta, Jacek Stasiak, Łukasz Klimkiewicz">
+        <title>Social Insight</title>
 
-{% block meta %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.2/min/dropzone.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.css">
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-{% endblock %}
+        <!-- Stylesheets -->
+        <link rel="stylesheet" href="{{ m.static('css/bootstrap.css') }}">
+        <link rel="stylesheet" href="{{ m.static('css/styles.css') }}">
+        <link rel="stylesheet" href="{{ m.static('css/fonts.css') }}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.css">
+        {% block styles %} {% endblock %}
 
-{% block body %}
-<p style="text-align: right">
-    <a href="{{ url_for('main.change_language', lang='en') }}">en</a>
-    <a href="{{ url_for('main.change_language', lang='pl') }}">pl</a>
-</p>
-{% block content %} {% endblock %}
-{% endblock %}
+        <!-- Top Scripts -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.2/min/dropzone.min.js"></script>
+        {% block topscripts %} {% endblock %}
+    </head>
+    <body id="page-top">
+
+        <!-- Navigation bar-->
+        <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img id="brandImage" src="{{ m.static('images/logo_white_long.png') }}"></a>
+                <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded">DARK MODE</a>
+                        </li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded">LANGUAGE</a>
+                        </li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded">LOGIN</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- All sections -->
+        {% block sections %} {% endblock %}
+
+        <!-- Footer section -->
+        <footer class="footer text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="mb-4">INVITE FRIENDS</h4>
+                        <p class="pre-wrap lead mb-0">If You like our webside, talk about it to You friends. We would be gratefull!</p>
+                    </div>
+                    <div class="col-lg-4 mb-5 mb-lg-0 order-md-2">
+                        <h4 class="mb-4">KEEP IN CONTACT</h4>
+                        <p class="pre-wrap lead mb-0">If You would like to have a new feature or You found a bug just contact us, here!</p>
+                    </div>
+                    <div class="col-lg-4 mb-0 mb-lg-0 order-md-1">
+                        <h4 class="mb-4">LIKE US ON FB</h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com"><i class="fab fa-fw fa-facebook-f"></i></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+        <!-- Copyright Section-->
+        <section class="copyright py-4 text-center text-white">
+            <div class="container"><small class="pre-wrap">Copyright © 2020</small></div>
+        </section>
+
+        <!-- Scroll to Top Button -->
+        <div class="scroll-to-top d-lg-none position-fixed"><a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
+
+        <!-- Scripts -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <script src="{{ m.static('scripts/layout.js') }}"></script>
+        <script src="{{ m.static('scripts/dropzone.js') }}"></script>
+        {% block bottomscripts %} {% endblock %}
+    </body>
+</html>
