Dodano ikonkę strony

--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -10,6 +10,9 @@
         <meta name="author" content="Radosław Pluta, Jacek Stasiak, Łukasz Klimkiewicz">
         <title>Social Insight</title>
 
+        <!-- Icon -->
+        <link rel="shortcut icon" href="{{ url_for('static', filename='images/icon.ico') }}">
+
         <!-- Stylesheets -->
         <link rel="stylesheet" href="{{ m.static('css/bootstrap.css') }}">
         <link rel="stylesheet" href="{{ m.static('css/styles.css') }}">
