Dadano modalne okno do wyboru języka

--- a/frontend/templates/_macros.html
+++ b/frontend/templates/_macros.html
@@ -6,3 +6,9 @@
 {% endif %}
 {% endmacro -%}
 
+{% macro script(name) -%}
+<script type="text/javascript">
+{% include name %}
+</script>
+{% endmacro -%}
+
