--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="Social Insight">
         <meta name="author" content="Radosław Pluta, Jacek Stasiak, Łukasz Klimkiewicz">
-        <title>Social Insight</title>
+        <title>Social Insight {% block title %} {% endblock %}</title>
 
         <!-- Icon -->
         <link rel="shortcut icon" href="{{ url_for('static', filename='images/icon.ico') }}">
@@ -34,11 +34,11 @@
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded">DARK MODE</a>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="">DARK MODE</a>
                         </li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded">LANGUAGE</a>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" data-toggle="modal" data-target="#languageModal" href="">LANGUAGE</a>
                         </li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded">LOGIN</a>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="">LOGIN</a>
                         </li>
                     </ul>
                 </div>
@@ -47,6 +47,8 @@
 
         <!-- All sections -->
         {% block sections %} {% endblock %}
+
+        {% include "_language_modal.html" %}
 
         <!-- Footer section -->
         <footer class="footer text-center">
@@ -81,7 +83,6 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <script src="{{ m.static('scripts/layout.js') }}"></script>
-        <script src="{{ m.static('scripts/dropzone.js') }}"></script>
         {% block bottomscripts %} {% endblock %}
     </body>
 </html>
