Dodane animacje podczas przewijania

--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="{{ m.static('css/styles.css') }}">
         <link rel="stylesheet" href="{{ m.static('css/fonts.css') }}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.css">
+        <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
         {% block styles %} {% endblock %}
 
         <!-- Top Scripts -->
@@ -82,7 +83,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="{{ m.static('scripts/layout.js') }}"></script>
+        <script src="{{ m.static('scripts/script.js') }}"></script>
         {% block bottomscripts %} {% endblock %}
     </body>
 </html>
