--- a/frontend/templates/_language_modal.html
+++ b/frontend/templates/_language_modal.html
@@ -15,7 +15,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-6 language-tile">
+                                <div class="col-12 col-md-6 language-tile" style="height: 300px">
                                     <img class="mb-5" src="{{ m.static('images/english.png') }}" alt="English"/>
                                 </div>
                                 <div class="col-12 col-md-6 language-tile">
