Poprawiono wygląd okna wyboru języków

--- a/frontend/templates/_language_modal.html
+++ b/frontend/templates/_language_modal.html
@@ -15,11 +15,11 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-6 language-tile" style="height: 300px">
-                                    <img class="mb-5" src="{{ m.static('images/english.png') }}" alt="English"/>
+                                <div class="col-12 col-md-6 language-tile">
+                                    <a href=""><img class="mb-5" src="{{ m.static('images/english.png') }}" alt="English"/></a>
                                 </div>
                                 <div class="col-12 col-md-6 language-tile">
-                                    <img class="mb-5" src="{{ m.static('images/polish.png') }}" alt="Polish"/>
+                                    <a href=""><img class="mb-5" src="{{ m.static('images/polish.png') }}" alt="Polish"/></a>
                                 </div>
                                 <div class="col-12">
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
