--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -32,44 +32,17 @@
         <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top"><img id="brandImage" src="{{ m.static('images/logo_white_long.png') }}"></a>
+                {% block hamburger %}
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
+                {% endblock %}
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="">DARK MODE</a>
-                        </li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" data-toggle="modal" data-target="#languageModal" href="">LANGUAGE</a>
-                        </li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="">LOGIN</a>
-                        </li>
-                    </ul>
+                    {% block navitems %} {% endblock %}
                 </div>
             </div>
         </nav>
 
-        <!-- All sections -->
-        {% block sections %} {% endblock %}
-
-        {% include "_language_modal.html" %}
-
-        <!-- Footer section -->
-        <footer class="footer text-center">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="mb-4">INVITE FRIENDS</h4>
-                        <p class="pre-wrap lead mb-0">If You like our webside, talk about it to You friends. We would be gratefull!</p>
-                    </div>
-                    <div class="col-lg-4 mb-5 mb-lg-0 order-md-2">
-                        <h4 class="mb-4">KEEP IN CONTACT</h4>
-                        <p class="pre-wrap lead mb-0">If You would like to have a new feature or You found a bug just contact us, here!</p>
-                    </div>
-                    <div class="col-lg-4 mb-0 mb-lg-0 order-md-1">
-                        <h4 class="mb-4">LIKE US ON FB</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com"><i class="fab fa-fw fa-facebook-f"></i></a>
-                    </div>
-                </div>
-            </div>
-        </footer>
+        <!-- Content -->
+        {% block content %} {% endblock %}
 
         <!-- Copyright Section-->
         <section class="copyright py-4 text-center text-white">
