--- a/frontend/templates/standard.html
+++ b/frontend/templates/standard.html
@@ -6,7 +6,7 @@
     </li>
     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" data-toggle="modal" data-target="#languageModal" href="">LANGUAGE</a>
     </li>
-    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="">LOGIN</a>
+    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('auth.login') }}">LOGIN</a>
     </li>
 </ul>
 {% endblock %}
