--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -2,13 +2,13 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block styles %}
-<style>
-#submit {margin: 20px}
-</style>
+    <style>
+    #submit {margin: 20px}
+    </style>
 {% endblock %}
 
 {% block sections %}
-<section class="page-section portfolio mt-5" id="featuresSection">
+<section class="page-section first-section mt-5">
     <div class="container">
 
         <!-- Heading -->
