--- a/frontend/templates/standard.html
+++ b/frontend/templates/standard.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block content %}
+{% include "_flash.html" %}
 {% block sections %} {% endblock %}
 
 {% include "_language_modal.html" %}
