--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -31,7 +31,7 @@
         <!-- Navigation bar-->
         <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img id="brandImage" src="{{ m.static('images/logo_white_long.png') }}"></a>
+                <a class="navbar-brand js-scroll-trigger" href="{{url_for('main.index')}}"><img id="brandImage" src="{{ m.static('images/logo_white_long.png') }}"></a>
                 {% block hamburger %}
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 {% endblock %}
