--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -4,6 +4,12 @@
         {{ m.script("_dropzone.js") }}
 {% endblock %}
 
+{% block styles %}
+<style>
+    #notifications { background-color: #1abc9c; }
+</style>
+{% endblock %}
+
 {% block sections %}
 <!-- Header-->
 <header class="masthead bg-primary text-white text-center">
