--- a/frontend/templates/_flash.html
+++ b/frontend/templates/_flash.html
@@ -3,9 +3,11 @@
         {% for message in get_flashed_messages() %}
         <div class="row">
             <div class="col-12">
-                <div class="alert alert-dark mb-0 mt-3" data-aos="fade-down">
-                    <button type="button" class="close" data-dismiss="alert">&times;</button>
-                    {{ message }}
+                <div data-aos="fade-down">
+                    <div class="alert alert-dark mb-0 mt-3 alert-dismissible fade show" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        {{ message }}
+                    </div>
                 </div>
             </div>
         </div>
