--- a/frontend/templates/_flash.html
+++ b/frontend/templates/_flash.html
@@ -1,10 +1,10 @@
-<section class="width-100" id="notifications">
-    <div class="container">
+<section class="width-100 bg-secondary">
+    <div class="container" id="notifications" data-aos="fade-right" data-aos-duration="500">
         {% for message in get_flashed_messages() %}
         <div class="row">
             <div class="col-12">
-                <div data-aos="fade-down">
-                    <div class="alert alert-dark mb-0 mt-3 alert-dismissible fade show" role="alert">
+                <div>
+                    <div class="alert alert-dark mb-2 mt-0" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         {{ message }}
                     </div>
