--- a/frontend/templates/_flash.html
+++ b/frontend/templates/_flash.html
@@ -1,13 +1,24 @@
 <section class="width-100 bg-secondary">
     <div class="container" id="notifications" data-aos="fade-right" data-aos-duration="500">
-        {% for message in get_flashed_messages() %}
+        {% for category, message in get_flashed_messages(with_categories=true) %}
         <div class="row">
             <div class="col-12">
                 <div>
-                    <div class="alert alert-dark mb-2 mt-0" role="alert">
+                    {% with class = "" %}
+                    {% if category == 'error' %}
+                        {% set class = 'alert-danger' %}
+                    {% elif category == 'success' %}
+                        {% set class = 'alert-success' %}
+                    {% elif category == 'warning' %}
+                        {% set class = 'alert-warning' %}
+                    {% else %}
+                        {% set class = 'alert-dark' %}
+                    {% endif %}
+                    <div class="alert mb-2 mt-0 {{ class }}" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        {{ message }}
+                        {{ category }}: {{ message }}
                     </div>
+                    {% endwith %}
                 </div>
             </div>
         </div>
