Dodano formularz rejestracyjny

--- a/frontend/templates/_flash.html
+++ b/frontend/templates/_flash.html
@@ -16,7 +16,7 @@
                     {% endif %}
                     <div class="alert mb-2 mt-0 {{ class }}" role="alert">
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        {{ category }}: {{ message }}
+                        {{ message }}
                     </div>
                     {% endwith %}
                 </div>
