--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -13,7 +13,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block">LOGGING</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block">REGISTER</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -25,8 +25,16 @@
 
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
-                {{ wtf.quick_form(form) }}
-                <p id="no-account">You don't have account? <a href="{{ url_for('auth.register') }}">Register now!</a></p>
+                <form class="form form-horizontal" method="post" role="form">
+                    {{ form.hidden_tag() }}
+                    {{ wtf.form_field(form.email) }}
+                    <div class="form-group">
+                        {{ wtf.form_field(form.password) }}
+                        <small class="form-text text-muted">Must have at lest {{ config.MIN_PASSWORD_LENGTH }} characters</small>
+                    </div>
+                    {{ wtf.form_field(form.password_confirmation) }}
+                    {{ wtf.form_field(form.submit) }}
+                </form>
             </div>
         </div>
     </div>
