--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -28,6 +28,12 @@
     </head>
     <body id="page-top">
 
+        <div class="preloader-wrapper">
+            <div class="preloader">
+                <img src="{{m.static('images/logo_white_icon.png')}}" style="width: 100px" alt="NILA">
+            </div>
+        </div>
+
         <!-- Navigation bar-->
         <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
             <div class="container">
