--- a/frontend/templates/standard.html
+++ b/frontend/templates/standard.html
@@ -2,12 +2,13 @@
 
 {% block navitems %}
 <ul class="navbar-nav ml-auto">
-    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="">DARK MODE</a>
-    </li>
-    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" data-toggle="modal" data-target="#languageModal" href="">LANGUAGE</a>
-    </li>
-    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('auth.login') }}">LOGIN</a>
-    </li>
+    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="">DARK MODE</a></li>
+    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" data-toggle="modal" data-target="#languageModal" href="">LANGUAGE</a></li>
+    {% if current_user.is_authenticated %}
+    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('auth.logout') }}">LOGOUT</a></li>
+    {% else %}
+    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ url_for('auth.login') }}">LOGIN</a></li>
+    {% endif %}
 </ul>
 {% endblock %}
 
