Dodano mechanizm zmiany hasła

--- a/frontend/templates/change_password.html
+++ b/frontend/templates/change_password.html
@@ -1,4 +1,11 @@
 {% extends "standard.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
+
+{% block styles %}
+    <style>
+    #submit {margin: 20px}
+    </style>
+{% endblock %}
 
 {% block sections %}
 <section class="page-section first-section mt-5">
@@ -6,7 +13,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block">YOUR ACCOUNT</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block">CHANGE PASSWORD</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -16,7 +23,11 @@
             <div class="divider-custom-line"></div>
         </div>
 
-        <a href="{{url_for('auth.change_password')}}">Change Password</a>
+        <div class="row justify-content-center">
+            <div class="col-12 col-lg-6">
+                {{ wtf.quick_form(form) }}
+            </div>
+        </div>
     </div>
 </section>
 {% endblock %}
