--- a/frontend/templates/error.html
+++ b/frontend/templates/error.html
@@ -3,7 +3,7 @@
 {% block hamburger %} {% endblock %}
 
 {% block content %}
-<header class="masthead bg-primary text-white text-center" style="height: 100vh">
+<header class="masthead bg-primary text-white text-center mt-5" style="height: 100vh">
     <div class="container d-flex align-items-center flex-column">
         <img id="uploadLogo" class="masthead-avatar mb-5 dz-clickable needsclick" src="{{ m.static('images/warning_sign.png') }}" alt="" data-aos="fade-down" data-aos-duration="1000">
 
