--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -13,7 +13,7 @@
 
         <!-- Upload zone-->
         <form id="uploadZone" action="{{ url_for('main.index_post') }}" class="dropzone">
-            <a href=""><img id="uploadLogo" class="masthead-avatar mb-5 dz-clickable needsclick" src="{{ m.static('images/logo_white_icon.png') }}" alt="" data-aos="fade-down" data-aos-duration="2000"></a>
+            <img id="uploadLogo" class="masthead-avatar mb-5 dz-clickable needsclick" src="{{ m.static('images/logo_white_icon.png') }}" alt="" data-aos="fade-down" data-aos-duration="2000">
             <div class="dz-message" style="margin: 0px; padding: 0px;" data-dz-message>
                 <span style="font-weight: bold">Drop here your data file!</span><br />
                 <span><a class="js-scroll-trigger" href="#howToGetSection" style="color: white;"><small>How to get it?</small></a></span>
