--- a/frontend/templates/reset_password_request.html
+++ b/frontend/templates/reset_password_request.html
@@ -13,7 +13,7 @@
 
         <!-- Heading -->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block">LOGGING</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block">RESET PASSWORD</h2>
         </div>
 
         <!-- Icon Divider-->
@@ -23,11 +23,15 @@
             <div class="divider-custom-line"></div>
         </div>
 
+        <div class="row text-center">
+            <div class="col-12 col-lg-12">
+                <p>Enter you email address bellow. <br />If it is valid you will receive instruction to reset Your password</p>
+            </div>
+        </div>
+
         <div class="row justify-content-center">
             <div class="col-12 col-lg-6">
                 {{ wtf.quick_form(form) }}
-                <p class="mt-3">You don't have account? <a href="{{ url_for('auth.register') }}">Register now!</a></p>
-                <p>You have forgotten your password? <a href="{{ url_for('auth.reset_password_request') }}">Reset password!</a></p>
             </div>
         </div>
     </div>
