--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -1,7 +1,7 @@
 {% extends "standard.html" %}
 
 {% block sections %}
-<section class="page-section first-section pt-5 bg-primary">
+<section class="page-section first-section pt-5 pb-5 bg-primary">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -24,6 +24,20 @@
                 <p class="text-light">{{ user.email }}</p>
                 <p><a href="{{url_for('auth.change_password')}}" class="text-light">Change Password</a></p>
                 <p><a href="{{url_for('auth.change_password')}}" class="text-light">Delete account</a></p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<section class="page-section pt-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-12 col-lg-6">
+                {% include "_data_packs_list.html" %}
+            </div>
+            <div class="col-12 col-lg-6">
+                {% include "_collations_list.html" %}
             </div>
         </div>
     </div>
