Dodana strona paczaki danych, jej kasowanie i zmiana nazwy

--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -12,6 +12,15 @@
 	padding-top: 2rem;
 }
 
+.account-item:hover {
+	background-color: #1abc9c;
+}
+
+.account-item a:hover {
+	text-decoration: none;
+	color: white;
+}
+
 /*----------------------- Preloader -----------------------*/
 .preloader-wrapper {
     height: 100%;
