--- a/frontend/templates/_rename_pack_modal.html
+++ b/frontend/templates/_rename_pack_modal.html
@@ -1,4 +1,4 @@
-<div class="portfolio-modal modal fade" id="languageModal" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal1Label" aria-hidden="true">
+<div class="portfolio-modal modal fade" id="rename-pack-modal" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal1Label" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
             <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
@@ -7,7 +7,7 @@
                     <div class="row justify-content-center">
                         <div class="col-12">
                             <!-- Portfolio Modal - Title-->
-                            <h2 class="portfolio-modal-title text-secondary mb-0">Language</h2>
+                            <h2 class="portfolio-modal-title text-secondary mb-0">Rename Pack</h2>
                             <!-- Icon Divider-->
                             <div class="divider-custom">
                                 <div class="divider-custom-line"></div>
@@ -15,14 +15,8 @@
                                 <div class="divider-custom-line"></div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 language-tile">
-                            <a href=""><img class="mb-5" src="{{ m.static('images/english.png') }}" alt="English"/></a>
-                        </div>
-                        <div class="col-12 col-md-6 language-tile">
-                            <a href=""><img class="mb-5" src="{{ m.static('images/polish.png') }}" alt="Polish"/></a>
-                        </div>
                         <div class="col-12">
-                            <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
+                            {{ wtf.quick_form(form) }}
                         </div>
                     </div>
                 </div>
