--- a/frontend/templates/_data_packs_list.html
+++ b/frontend/templates/_data_packs_list.html
@@ -8,13 +8,53 @@
     <div class="row">
         <div class="col-12 text-center">
             <div class="card">
-                <div class="card-header"><a href="#">Upload new pack</a></div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Pack</li>
-                    <li class="list-group-item">Pack</li>
-                    <li class="list-group-item">Pack</li>
-                    <li class="list-group-item">Pack</li>
-                </ul>
+                <div class="card-header">
+                    <div class="container">
+                            <div class="row">
+                                <div class="col-12 col-sm-4">Name</div>
+                                <div class="col-12 col-sm-4">Status</div>
+                                <div class="col-12 col-sm-4">Date</div>
+                            </div>
+                        </div>
+                </div>
+                <div class="card-body p-0 m-0">
+                    <ul class="list-group list-group-flush">
+                        {% for pack in current_user.packs %}
+                        <li class="list-group-item account-item">
+                            <a href="{{ url_for('main.packs', id=pack.id) }}">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-12 col-sm-4 align-middle m-auto">
+                                            {{ pack.name }}
+                                        </div>
+                                        <div class="col-12 col-sm-4 m-auto">
+                                            {{ pack.status }}
+                                        </div>
+                                        <div class="col-12 col-sm-4">
+                                            {{ moment(pack.creation_date).format('l') }} {{ moment(pack.creation_date).format('HH:mm') }}
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        {% endfor %}
+
+                        {% if not current_user.packs %}
+                        <li class="list-group-item account-item">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-12 col-sm-4 align-middle m-auto"></div>
+                                    <div class="col-12 col-sm-4 m-auto">Empty</div>
+                                    <div class="col-12 col-sm-4"></div>
+                                </div>
+                            </div>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+                <div class="card-footer">
+                    <a href="{{ url_for('main.index') }}">Upload new pack</a>
+                </div>
             </div>
         </div>
     </div>
