--- a/frontend/templates/account.html
+++ b/frontend/templates/account.html
@@ -21,7 +21,7 @@
                 <img src="{{ m.static('images/user_icon.png') }}" style="width: 130px" />
             </div>
             <div class="col-auto">
-                <p class="text-light">{{ user.email }}</p>
+                <p class="text-light">{{ current_user.email }}</p>
                 <p><a href="{{url_for('auth.change_password')}}" class="text-light">Change Password</a></p>
                 <p><a href="{{url_for('auth.change_password')}}" class="text-light">Delete account</a></p>
             </div>
