--- a/frontend/templates/_collations_list.html
+++ b/frontend/templates/_collations_list.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 mt-lg-0">
+<div class="container-fluid">
     <div class="row">
         <div class="col-12 text-center">
             <h2 class="page-section-heading text-secondary mb-4 d-inline-block">COLLATIONS</h2>
@@ -8,13 +8,55 @@
     <div class="row">
         <div class="col-12 text-center">
             <div class="card">
-                <div class="card-header"><a href="#">Create new collation</a></div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">Collation</li>
-                    <li class="list-group-item">Collation</li>
-                    <li class="list-group-item">Collation</li>
-                </ul>
+                <div class="card-header bg-secondary text-white">
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-12 col-sm-4">Name</div>
+                            <div class="col-12 col-sm-4">Size</div>
+                            <div class="col-12 col-sm-4">Date</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body p-0 m-0">
+                    <ul class="list-group list-group-flush">
+                        {% for collation in current_user.collations %}
+                        <li class="list-group-item account-item">
+                            <a href="{{ url_for('main.collation', id=collation.id) }}" class="text-secondary">
+                                <div class="container-fluid">
+                                    <div class="row">
+                                        <div class="col-12 col-sm-4 align-middle m-auto">
+                                            {{ collation.name }}
+                                        </div>
+                                        <div class="col-12 col-sm-4 m-auto">
+                                            0
+                                        </div>
+                                        <div class="col-12 col-sm-4">
+                                            {{ moment(collation.creation_date).format('l') }} {{ moment(collation.creation_date).format('HH:mm') }}
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+                        {% endfor %}
+
+                        {% if not current_user.collations %}
+                        <li class="list-group-item account-item">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-12 col-sm-4 align-middle m-auto"></div>
+                                    <div class="col-12 col-sm-4 m-auto">Empty</div>
+                                    <div class="col-12 col-sm-4"></div>
+                                </div>
+                            </div>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+                <div class="card-footer bg-secondary text-white">
+                    <a href="{{ url_for('main.create_collation') }}" class="text-white">Create new collation</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
