--- a/frontend/templates/pack.html
+++ b/frontend/templates/pack.html
@@ -2,55 +2,6 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block sections %}
-<section class="page-section portfolio first-section bg-primary pb-0">
-    <div class="container">
-
-        <!-- Heading -->
-        <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block text-uppercase">
-                {% if current_user.is_authenticated %}
-                {{ pack.name }}
-                {% else %}
-                RESULTS
-                {% endif %}
-            </h2>
-        </div>
-        {% if current_user.is_authenticated %}
-        <div class="text-center">
-            <span class="mr-3"><a href="" data-toggle="modal" data-target="#rename-pack-modal" class="text-secondary">rename</a></span>
-            <span class="ml-3"><a href="{{ url_for('main.remove_pack_confirm', id=pack.id) }}" class="text-secondary">remove</a></span>
-        </div>
-        {% endif %}
-
-        <!-- Portfolio Grid Items-->
-        <div class="row justify-content-center mt-4" data-aos="fade-up">
-            <!-- Portfolio Item 1-->
-            <div class="col-md-6 col-lg-3 mb-5">
-                <div class="portfolio-item mx-auto">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
-                </div>
-            </div>
-            <!-- Portfolio Item 2-->
-            <div class="col-md-6 col-lg-3 mb-5">
-                <div class="portfolio-item mx-auto">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
-                </div>
-            </div>
-            <!-- Portfolio Item 3-->
-            <div class="col-md-6 col-lg-3 mb-5">
-                <div class="portfolio-item mx-auto">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
-                </div>
-            </div>
-            <!-- Portfolio Item 4-->
-            <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
-                <div class="portfolio-item mx-auto">
-                    <img class="img-fluid" src="{{ m.static('images/foo.png') }}" alt="" />
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
+{% include "_categories.html" %}
 {% include "_rename_pack_modal.html" %}
 {% endblock %}
