Dodano stronę credits

--- a/frontend/templates/basic.html
+++ b/frontend/templates/basic.html
@@ -48,7 +48,7 @@
 
         <!-- Copyright Section-->
         <section class="copyright py-4 text-center text-white">
-            <div class="container"><small class="pre-wrap">Copyright © 2020</small></div>
+            <div class="container"><small class="pre-wrap">Copyright © 2020 | <a href="{{ url_for('main.credits') }}" class="text-light">credits</a></small></div>
         </section>
 
         <!-- Scroll to Top Button -->
